--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -9,7 +9,7 @@ on:
 
 env:
   IMAGE_NAME: secshellnet/ci
-  DOCKER_PLATFORMS: linux/amd64,linux/arm64/v8
+  DOCKER_PLATFORMS: linux/amd64 #,linux/arm64/v8
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
